--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.8.5",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
