--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.9.3",
     "@faker-js/faker": "^7.3.0",
     "@fontsource/roboto": "^4.5.7",
+    "@manufac/reactjs-calendar-heatmap": "^1.0.11",
     "@mui/material": "^5.8.5",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
