--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@faker-js/faker": "^7.3.0",
     "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.8.5",
+    "@types/d3-array": "^3.0.3",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "d3-array": "^3.1.6",
     "date-fns": "^2.28.0",
     "echarts": "^5.3.3",
     "react": "^18.2.0",
