--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-array": "^3.1.6",
     "date-fns": "^2.28.0",
     "echarts": "^5.3.3",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
